Refactor, update README and dockerfile
