# src/routes/index.ts
@@ -1,31 +1,10 @@
-import makeRecipeInformationController from '../controller/recipeInformationController'
-import makeRecipeInformationService from '../services/recipeInformationService'
 import express, {Router} from 'express'
-import makeScrapeCookidooService from '../services/scrapeCookidooService'
-import makeCacheService from '../services/cacheService'
-import makeRenderService from '../services/renderService'
-
-const {renderPage, getAuthentificationCookie} = makeRenderService()
-const {setCachedValue, getCachedValue} = makeCacheService()
-const {scrapeRecipeInformationById, scrapeWeekplanRecipeIds} = makeScrapeCookidooService({
-  setCachedValue,
-  getCachedValue,
-  renderPage,
-  getAuthentificationCookie,
-})
-const {listRecipeInformationById, listRecipeInformationByWeekplan} = makeRecipeInformationService({
-  scrapeRecipeInformationById,
-  scrapeWeekplanRecipeIds,
-})
-const {getRecipeInformationById, getRecipeInformationByWeekplan} = makeRecipeInformationController({
-  listRecipeInformationById,
-  listRecipeInformationByWeekplan,
-})
+import recipeInformationController from '../controller/recipeInformationController'
 
 function getRoutes(): Router {
   const router = express.Router()
-  router.get('/recipe/:recipeId', getRecipeInformationById)
-  router.get('/recipes/weekplan', getRecipeInformationByWeekplan) // need to login
+  router.get('/recipe/:recipeId', recipeInformationController.getRecipeInformationById)
+  router.get('/recipes/weekplan', recipeInformationController.getRecipeInformationByWeekplan) // need to login
   router.get('/recipes/watchlist') // need to login
   router.get('/recipes/customlist') // need to login
   router.get('/recipes/collection/:collectionId') // need to login
