# src/swaggerSpec.json
@@ -2,19 +2,19 @@
   "openapi": "3.0.1",
   "info": {
     "title": "Cookidoo Scraper API",
-    "description": "Scripes the recipies of your Cookidoo",
-    "version": "0.1"
+    "description": "Scrapes recipe information from the Cookidoo website",
+    "version": "0.5"
   },
   "paths": {
-    "/api/recipe": {
+    "/api/recipe/{recipeId}": {
       "get": {
         "description": "Gets a recipe information object",
         "parameters": [
           {
             "name": "recipeId",
-            "in": "query",
+            "in": "path",
             "required": true,
-            "style": "form",
+            "style": "simple",
             "explode": true,
             "schema": {
               "type": "string"
@@ -24,96 +24,55 @@
         ],
         "responses": {
           "200": {
-            "description": "Sucessfully a recipe information object",
-            "content": {
-              "application/json; charset=utf-8": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
+            "description": "Sucessfully a recipe information object"
           },
           "400": {
-            "description": "Error if not providing a recipe ID",
-            "content": {
-              "text/html; charset=utf-8": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
+            "description": "Error if not providing a correct recipe ID"
           },
           "500": {
-            "description": "Generic error if the recipe could not be scraped",
-            "content": {
-              "text/html; charset=utf-8": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
+            "description": "Generic error if the recipe could not be scraped"
           }
         }
       }
     },
-    "/api/weekplan": {
-      "post": {
-        "description": "Gets a list of recipe information for all recipes planned in your weekplan",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/body"
-              },
-              "example": "{\n    \"username\": \"USERNAME\",\n    \"password\": \"PASSWORD\"\n}"
-            }
+    "/api/recipes/weekplan": {
+      "get": {
+        "description": "Gets a list of recipe information for all recipes planned in your weekplan from today or the following days",
+        "parameters": [
+          {
+            "name": "username",
+            "in": "query",
+            "description": "Cookidoo username, usally email adresss",
+            "required": true,
+            "style": "form",
+            "explode": true,
+            "schema": {
+              "type": "string"
+            },
+            "example": "email@email.de"
+          },
+          {
+            "name": "password",
+            "in": "query",
+            "description": "Cookidoo password",
+            "required": true,
+            "style": "form",
+            "explode": true,
+            "schema": {
+              "type": "string"
+            },
+            "example": "test12345"
           }
-        },
+        ],
         "responses": {
           "200": {
-            "description": "Sucessfully gets the list of recipe information of your weekplan",
-            "content": {
-              "application/json; charset=utf-8": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
+            "description": "Sucessfully gets the list of recipe information of your weekplan"
           },
           "400": {
-            "description": "Error if username and password to login are not provided",
-            "content": {
-              "text/html; charset=utf-8": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
+            "description": "Error if username and password to login are not provided"
           },
           "500": {
-            "description": "Generic error if the recipes could not be scraped or failed to login",
-            "content": {
-              "text/html; charset=utf-8": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        }
-      }
-    }
-  },
-  "components": {
-    "schemas": {
-      "body": {
-        "type": "object",
-        "properties": {
-          "password": {
-            "type": "string"
-          },
-          "username": {
-            "type": "string"
+            "description": "Generic error if the recipes could not be scraped or failed to login"
           }
         }
       }
